adding code snippet

--- a/Day 23/index.css
+++ b/Day 23/index.css
@@ -13,6 +13,11 @@ body {
   font-family: sans-serif;
   color: antiquewhite;
 }
+
+img {
+  width: 100%;
+  object-fit: contain;
+}
 .container {
   width: 100%;
   max-width: 600px;
